# Hytale_CurseForge_HeadlessClient

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  com.hytale.modmanager.desktop  deploy.sh  requirements.txt  run.sh
.github/workflows/: rust.yml
flatpak/: com.hytale.modmanager.json
src/: main.rs  style.rs
src/api/: curse_forge_api.rs  local_mods.rs  mod.rs  mod_tale_api.rs  settings.rs  ui_mod.rs
src/components/: api_dialog.rs  drop_down.rs  mod.rs  mod_card.rs  mod_info.rs  sidebar.rs
src/pages/: installed.rs  mod.rs  search.rs
src/state/: mod.rs  mod_store.rs
